Lame commit: For TA to clonequickly

--- a/src/html/modal.ejs
+++ b/src/html/modal.ejs
@@ -1,9 +1,15 @@
-<!-- sidebar -->
-<div id="sbar" class="active">
-  <ul>
-    <div class="sbar-ctn">
-      <li>Map Data</li>
-      <li>About</li>
+<!-- Modal -->
+<div id="" class="modal hidden">
+  <div class="modal-ctn">
+    <div class="modal-bg"></div>
+    <div class="modal-box">
+      <div class="modal-box-head">
+
+        <!-- <input class="modal-cb" type="checkbox" /> -->
+        <button class="modal-cb">button</button>
+
+        <h1>About this space</h1>
+      </div>
     </div>
-  </ul>
+  </div>
 </div>
