--- a/src/html/index.ejs
+++ b/src/html/index.ejs
@@ -5,22 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="stylesheet" href="leaflet.css">
+    <!-- Stylesheet for leaflet -->
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css"
+      integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ=="
+      crossorigin=""
+    />
     <link rel="stylesheet" href="../css/main.css" />
 
     <title>Trent Global Project 1</title>
   </head>
   <body id="airbnb">
-    
-    <%- include('navbar.ejs') %> 
-
+    <%- include('navbar.ejs') %>
     <main>
+      <%- include('sidebar.ejs') %>
       <%- include('modal.ejs') %> 
-      <div id="map"></div>a
+      <div id="map"></div>
     </main>
-    
-    
-    <script src="../js/main.js"></script>
-    <script src="../js/bundle.js"></script>
+    <%- include('scripts.ejs') %>
   </body>
 </html>
