--- a/src/static/css/components/index.css
+++ b/src/static/css/components/index.css
@@ -1,3 +1,8 @@
 @import url('navbar.css');
+@import url('sidebar.css');
 @import url('modal.css');
 @import url('map.css');
+
+html {
+  overflow: hidden;
+}
