--- a/src/static/css/components/modal.css
+++ b/src/static/css/components/modal.css
@@ -1,31 +1,78 @@
-@import url("../base/fonts.css");
-
-#sbar {
+.modal {
   position: relative;
-  display: inline-block;
-  width: 30vw;
-  height: 100vh;
-  background-color: #767676; 
 }
 
-#sbar > ul {
+.modal-ctn {
+  position: absolute;  
+  z-index: 314158;
   display: flex;
-  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 60vw;
+  height: calc(100vh - 40px - 3.8rem);
+  
+} 
+
+.modal-bg {
+  position: inherit;
+  z-index: 314158;
+  opacity: 0.7;
+  width: 100%;
   height: 100%;
+  background-color: rgba(0,0,0);
 }
 
-#sbar > ul > .empty-blk1 {
-  width: 100vw;
-  height: calc(4rem + 40px);
+.modal-box {
+  position: inherit;
+  z-index: 314159;
+  opacity: 1;
+  width: 45vw;
+  height: calc(100vh - 40px - 3.8rem - 20vh);
+  padding: 1rem;
+  border-radius: 24px;
+  background-color: white;
+  font-family: Raleway-Regular;
+  font-size: 1rem;
 }
 
-#sbar > ul .sbar-ctn > li {
-  margin: 1rem 1rem 1rem 2rem;
-  color: black; 
-  font-family: MochiyPop;
-  font-size: 0.8rem;
+#modal-cb {
+  position: relative;
+  z-index: 314200;
+
+  display: block;
+  opacity: 0.5;
+  width: 25px;
+  height: 25px;
+
+  cursor: pointer;
 }
 
+#modal-box-x {
+  position: absolute;
+  z-index: 314160;
+  left: 18px;
+  width: 30px;
+  height: 30px;
+}
 
+#modal-box-x:hover {
+  background-color: rgba(118, 118, 118, 0.3);
+}
 
+#modal-box-x svg {
+  width: 20px;
+  height: 20px;
+}
+
+.modal-box-head > h1 {
+  padding: 1rem 0rem;
+  font-family: Raleway-Bold;
+  font-size: 2rem;
+}
+
+.modal-box b {
+  display: block;
+  font-family: Raleway-Bold;
+  font-size: 1.5rem;
+}
 
