script.ejs: Added helpers.js, info.js & made scripts module to allow importing

--- a/src/html/scripts.ejs
+++ b/src/html/scripts.ejs
@@ -11,6 +11,8 @@
   referrerpolicy="no-referrer"
 ></script>
 
+<script type="module" src="../js/helpers.js"></script>
+<script type="module" src="../js/info.js"></script>
 
-<script src="../js/map.js"></script>
+<script type="module" src="../js/map.js"></script>
 <script src="../js/main.js"></script>
