--- a/src/static/css/components/navbar.css
+++ b/src/static/css/components/navbar.css
@@ -52,7 +52,7 @@
 	border-bottom: 6px solid black;
 }  */
 
-@media screen and (max-width: 590px) {
+/* @media screen and (max-width: 590px) {
   .nav {
     justify-content: flex-start;
   }
@@ -60,7 +60,7 @@
 	#nav-list .nav-ul  {
 		display: none;
 	}
-}
+} */
 
 #nav-btn {
   position: relative;
