--- a/src/static/css/components/sidebar.css
+++ b/src/static/css/components/sidebar.css
@@ -91,20 +91,85 @@
 }
 
 .listing-descCtn {
-  padding-bottom: 5rem;
+  padding-bottom: 1.5rem;
+  margin: 1rem;
+  border-bottom: 1px solid rgb(220,220,220);
 }
 
 .listing-descCtn > p {
-  margin: 1rem;
+  margin-bottom: 1.5rem;
   font-family: Raleway-Regular;
   font-size: 1rem;
 }
 
 .listing-descCtn > button {
-  margin: 1rem;
   border: none;
   border-bottom: 3px solid black;
   font-family: Raleway-Regular;
   font-size: 1rem;
   background-color: transparent;
+}
+
+.listing-Size {
+  margin: 1rem;
+  padding-bottom: 1.5rem;
+  border-bottom: 1px solid rgb(220,220,220);
+}
+
+.listing-Size > h3 {
+  width: 60%;
+  margin-bottom: 1.5rem;
+  font-family: Raleway-Bold;
+  font-size: 1.2rem;
+}
+ 
+.listing-SizeIcon {
+  width: 50px;
+  height: 50px;
+}
+
+.listing-IconCtn {
+  display: flex;
+  align-items: center;
+}
+
+.listing-IconCtn span {
+  margin-right: 1rem;
+  font-family: Raleway-Bold;
+  font-size: 1rem;
+}
+
+.listing-Amen {
+  margin: 1rem;
+  padding-bottom: 1.5rem;
+  border-bottom: 1px solid rgb(220,220,220);
+}
+
+.listing-Amen > h3 {
+  width: 60%;
+  margin-bottom: 1.5rem;
+  font-family: Raleway-Bold;
+  font-size: 1.2rem;
+}
+
+.listing-AmenCtn {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.listing-AmenCtn-Item {
+  display: flex;
+  align-items: center;
+  margin-right: 1rem;
+  width: 40%;
+}
+
+.listing-AmenCtn-Item > img {
+  width: 40px;
+  height: 40px;
+}
+
+.listing-AmenCtn-Item > span {
+  font-family: Raleway-Regular;
+  font-size: 1rem;
 }
