--- a/src/html/index.ejs
+++ b/src/html/index.ejs
@@ -12,15 +12,24 @@
       integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ=="
       crossorigin=""
     />
+
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/leaflet.markercluster@1.4.1/dist/MarkerCluster.Default.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/leaflet.markercluster@1.4.1/dist/MarkerCluster.css"
+    />
+
     <link rel="stylesheet" href="../css/main.css" />
 
     <title>Trent Global Project 1</title>
   </head>
   <body id="airbnb">
-    <%- include('navbar.ejs') %>
+    <%- include('navbar.ejs') %> <%- include('menu.ejs') %>
     <main>
-      <%- include('sidebar.ejs') %>
-      <%- include('modal.ejs') %> 
+      <%- include('sidebar.ejs') %> <%- include('modal.ejs') %>
       <div id="map"></div>
     </main>
     <%- include('scripts.ejs') %>
