navbar.ejs: Added active class for nav & nav-list, commented out brand name

--- a/src/html/navbar.ejs
+++ b/src/html/navbar.ejs
@@ -1,16 +1,18 @@
 <!-- Navbar -->
-<nav class="nav">
+<nav class="nav nav-active">
+  
   <div id="nav-btn">
     <input id="nav-input" type="checkbox" />
     <span></span>
     <span></span>
     <span></span>
   </div>
-  <div id="nav-list">
+
+  <div id="nav-list" class="nav-list-active">
     <div id="nav-brand">
       <img src="../css/vendors/imgs/icons/brand.png" alt="" />
       <div id="nav-brand-name">
-        <h1>Airbnb VisualData</h1>
+        <!-- <h1>Airbnb VisualData</h1> -->
       </div>
     </div>
   </div>
