--- a/src/html/scripts.ejs
+++ b/src/html/scripts.ejs
@@ -4,12 +4,24 @@
   crossorigin=""
 ></script>
 
+<script src="https://unpkg.com/leaflet.markercluster@1.4.1/dist/leaflet.markercluster-src.js"></script>
+
+<script src="https://unpkg.com/leaflet.featuregroup.subgroup@1.0.2/dist/leaflet.featuregroup.subgroup.js"></script>
+
 <script
   src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.25.0/axios.min.js"
   integrity="sha512-/Q6t3CASm04EliI1QyIDAA/nDo9R8FQ/BULoUFyN4n/BDdyIxeH7u++Z+eobdmr11gG5D/6nPFyDlnisDwhpYA=="
   crossorigin="anonymous"
   referrerpolicy="no-referrer"
 ></script>
+
+<script
+  src="https://code.jquery.com/jquery-3.2.1.min.js"
+  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+  crossorigin="anonymous"
+></script>
+
+<script type="module" src="../js/polyline.encoded.js"></script>
 
 <script type="module" src="../js/helpers.js"></script>
 <script type="module" src="../js/info.js"></script>
