index.css: Added menu.css & search.css to imports

--- a/src/static/css/components/index.css
+++ b/src/static/css/components/index.css
@@ -1,7 +1,11 @@
 @import url('navbar.css');
+@import url('menu.css');
 @import url('sidebar.css');
+@import url('search.css');
+
 @import url('modal.css');
 @import url('map.css');
+
 
 html {
   overflow: hidden;
