--- a/src/static/css/components/map.css
+++ b/src/static/css/components/map.css
@@ -10,3 +10,19 @@ main {
   height: calc(100vh - 2rem - 40px);
 }
 
+.clusterIcon {
+  position: relative;
+}
+
+.clusterImg {
+  position: absolute;
+  top: -10px;
+  left: -10px;
+  border-radius: 100%;
+  width: 35px;
+  height: 35px;
+  line-height: 32px;
+  text-align: center;
+  font-family: Raleway-Bold;
+  font-size: 1rem;
+}
