--- a/src/static/css/components/sidebar.css
+++ b/src/static/css/components/sidebar.css
@@ -5,24 +5,15 @@
   z-index: 314159;
   display: inline-block;
   width: 40vw;
-  height: calc(100vh - 40px - 3.8rem);
+  height: calc(100vh - 40px - 2rem);
   background-color: #767676;
 }
 
-#sbar > ul {
+#sbar > .sbar-ctn {
   display: flex;
   flex-direction: column;
   height: 100%;
-}
-
-#sbar > ul > .empty-blk1 {
-  width: 100vw;
-  height: calc(4rem + 40px);
-}
-
-#sbar > ul .sbar-ctn > li {
   color: black;
-  font-family: Railway;
 }
 
 
@@ -35,15 +26,8 @@
 
 
 
-
-
-
-
-
-
-
-
-.listing-focus {
+.listing-focus,
+.search-focus {
   height: calc(100vh - 40px - 3.8rem);
   padding: 1rem;
   display: flex;
@@ -51,22 +35,6 @@
   flex-grow: 1;
   overflow: scroll;
   background-color: white;
-}
-
-.listing-focus > h1 {
-  width: 90%;
-  margin: 1rem;
-  padding: 1rem 0 1.5rem;
-  font-family: Raleway-Bold;
-  font-size: 1.5rem;
-}
-
-.listing-img {
-  display: block;
-  max-width: 100%;
-  width: auto;
-  height: 40vh;
-  border-radius: 24px;
 }
 
 .listing-hostCtn {
@@ -92,12 +60,12 @@
 
 .listing-descCtn {
   padding-bottom: 1.5rem;
-  margin: 1rem;
+  margin: 1.5rem 1rem;
   border-bottom: 1px solid rgb(220,220,220);
 }
 
 .listing-descCtn > p {
-  margin-bottom: 1.5rem;
+  margin-bottom: 1rem;
   font-family: Raleway-Regular;
   font-size: 1rem;
 }
@@ -111,7 +79,7 @@
 }
 
 .listing-Size {
-  margin: 1rem;
+  margin: 1.5rem 1rem;
   padding-bottom: 1.5rem;
   border-bottom: 1px solid rgb(220,220,220);
 }
@@ -140,7 +108,7 @@
 }
 
 .listing-Amen {
-  margin: 1rem;
+  margin: 1.5rem 1rem;
   padding-bottom: 1.5rem;
   border-bottom: 1px solid rgb(220,220,220);
 }
@@ -155,21 +123,97 @@
 .listing-AmenCtn {
   display: flex;
   flex-wrap: wrap;
+  margin-bottom: 1.5rem;
 }
 
-.listing-AmenCtn-Item {
+.listing-AmenCtnItem {
   display: flex;
   align-items: center;
   margin-right: 1rem;
   width: 40%;
 }
 
-.listing-AmenCtn-Item > img {
+.listing-AmenCtnItem > img {
   width: 40px;
   height: 40px;
 }
 
-.listing-AmenCtn-Item > span {
+.listing-AmenCtnItem > span {
   font-family: Raleway-Regular;
   font-size: 1rem;
 }
+
+.listing-AmenBtn {
+  border: none;
+  border-bottom: 3px solid black;
+  font-family: Raleway-Regular;
+  font-size: 1rem;
+  background-color: transparent;
+}
+
+.listing-Reviews {
+  padding-bottom: 2.5rem;
+}
+
+.listing-ReviewsHead {
+  display: flex;
+  align-items: center;
+}
+
+.listing-ReviewsHead > img {
+  width: 40px;
+  height: 40px;
+}
+
+.listing-ReviewsHead > h3 {
+  font-family: Raleway-Bold;
+  font-size: 1.2rem;
+}
+
+
+.listing-ReviewsCtn {
+  margin: 1rem;
+  font-family: Raleway-Regular;
+  font-size: 1rem;
+}
+
+.listing-ReviewItem {
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 2rem;
+}
+
+.listing-ScoreCtn {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 70%;
+}
+
+.listing-BarCtn {
+  position: relative;
+  display: flex;
+  align-items: center;
+
+  border-radius: 24px;
+
+  width: 50%;
+  height: 8px;
+  background-color: #CECFCD;
+}
+
+.listing-BarVal {
+  position: relative;
+  z-index: 2;
+
+  border-radius: 24px;
+
+  width: calc(var(--score) / 5 * 100%);
+  height: 8px;
+
+  background-color: #484848;
+}
+
+.
