--- a/src/html/sidebar.ejs
+++ b/src/html/sidebar.ejs
@@ -1,18 +1,12 @@
 <!-- sidebar -->
-<div id="sbar" class="active">
-  <ul>
-    <div class="sbar-ctn">
-      <li id="sbar-map" class="sbar-listing active">
-        <div class="listing-focus">
-        </div>
-      </li>
+<aside id="sbar" class="active">
+  <div class="sbar-ctn">
+    <section id="sbar-map" class="sbar-listing active">
+      <div class="listing-focus"></div>
+    </section>
 
-      <li id="sbar-rou" class="sbar-listing hidden">
-        <div class="search-focus">
-          <%- include("search.ejs") %> 
-        </div>
-      </li>
-
-    </div>
-  </ul>
-</div>
+    <section id="sbar-rou" class="sbar-listing hidden">
+      <div class="search-focus"><%- include("search.ejs") %></div>
+    </section>
+  </div>
+</aside>
