ejs: Minor changes, repositioned some script tags

--- a/src/html/index.ejs
+++ b/src/html/index.ejs
@@ -23,13 +23,15 @@
     />
 
     <link rel="stylesheet" href="../css/main.css" />
-
     <title>Trent Global Project 1</title>
+  
   </head>
   <body id="airbnb">
     <%- include('navbar.ejs') %> <%- include('menu.ejs') %>
     <main>
-      <%- include('sidebar.ejs') %> <%- include('modal.ejs') %>
+      
+      <%- include('sidebar.ejs') %> 
+      <%- include('modal.ejs') %>
       <div id="map"></div>
     </main>
     <%- include('scripts.ejs') %>
@@ -37,5 +39,4 @@
 
   <!-- Add Footer later -->
   <footer></footer>
-  
 </html>
