--- a/src/html/navbar.ejs
+++ b/src/html/navbar.ejs
@@ -8,10 +8,10 @@
   </div>
 
   <div id="nav-list" class="nav-list-active">
-    <div id="nav-brand">
+    <figure id="nav-brand">
       <img src="../css/vendors/imgs/icons/brand.png" alt="" />
       <div id="nav-brand-name">
       </div>
-    </div>
+    </figure>
   </div>
 </nav>
