--- a/src/html/scripts.ejs
+++ b/src/html/scripts.ejs
@@ -22,9 +22,13 @@
 ></script>
 
 <script type="module" src="../js/polyline.encoded.js"></script>
-
 <script type="module" src="../js/helpers.js"></script>
-<script type="module" src="../js/info.js"></script>
 
+<script type="module" src="../js/navbar.js"></script>
+<script type="module" src="../js/menu.js"></script>
+<script type="module" src="../js/modal.js"></script>
+
+<script type="module" src="../js/info.js"></script>
+<script type="module" src="../js/search.js"></script>
 <script type="module" src="../js/map.js"></script>
-<script src="../js/main.js"></script>
+
