--- a/src/html/sidebar.ejs
+++ b/src/html/sidebar.ejs
@@ -1,11 +1,11 @@
 <!-- sidebar -->
 <aside id="sbar" class="active">
   <div class="sbar-ctn">
-    <section id="sbar-map" class="sbar-listing active">
+    <section id="sbar-maps" class="sbar-listing active">
       <div class="listing-focus"></div>
     </section>
 
-    <section id="sbar-rou" class="sbar-listing hidden">
+    <section id="sbar-route" class="sbar-listing hidden">
       <div class="search-focus"><%- include("search.ejs") %></div>
     </section>
   </div>
