--- a/src/static/css/layout/modal.css
+++ b/src/static/css/layout/modal.css
@@ -1,16 +1,20 @@
 #modal {
-  position: relative;
+  /* position: relative; */
+  position: absolute;
+  display: block;
+}
+
+#modal.hidden {
+  display: none;
 }
 
 .modal-ctn {
   position: absolute;  
-  z-index: 314158;
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 60vw;
-  height: calc(100vh - 40px - 3.8rem);
-  
+  width: 100vw;
+  height: calc(100vh - 40px - 2rem);
 } 
 
 .modal-bg {
@@ -18,7 +22,7 @@
   z-index: 314158;
   opacity: 0.7;
   width: 100%;
-  height: 100%;
+  height: calc(100vh - 40px - 2rem);
   background-color: rgba(0,0,0);
 }
 
@@ -26,7 +30,7 @@
   position: inherit;
   z-index: 314159;
   opacity: 1;
-  width: 45vw;
+  width: 80vw;
   height: calc(100vh - 40px - 3.8rem - 20vh);
   padding: 1rem;
   border-radius: 24px;
@@ -66,18 +70,18 @@
 .modal-box-head > h1 {
   padding: 1rem 0rem;
   font-family: Raleway-Bold;
-  font-size: 2rem;
+  font-size: 1.5rem;
 }
 
 .modal-box-text {
-  height: 85%;
+  height: calc(100% - 126px);
   overflow: scroll;
 }
 
 .modal-box b {
   display: block;
   font-family: Raleway-Bold;
-  font-size: 1.5rem;
+  font-size: 1.2rem;
 }
 
 .modal-box-amen {
@@ -85,7 +89,7 @@
   align-items: center;
 }
 
-.modal-box-textItem > img {
+.modal-box-text-item > img {
   width: 80px;
   height: 80px;
 }
@@ -103,4 +107,78 @@
 .modal-box-review > p {
   font-family: Raleway-Regular;
   font-size: 1rem;
+}
+
+@media screen and (min-width: 769px) {
+  .modal-box {
+    padding: 2rem;
+  }
+
+  .modal-box-head > h1 {
+    font-size: 2.5rem;
+  }
+
+  .modal-box b,
+  .modal-box-review > h4 {
+    font-size: 1.8rem;
+  }
+
+  .modal-box-review > p {
+    font-size: 1.4rem;
+  }
+}
+
+@media screen and (min-width: 1025px) {
+  .modal-box {
+    padding: 2rem;
+    font-size: 1.4rem;
+  }
+
+  .modal-box-head > h1 {
+    font-size: 2.5rem;
+  }
+
+  .modal-box-text-item > img {
+    width: 120px;
+    height: 120px;
+  }
+
+  .modal-box b,
+  .modal-box-review > h4 {
+    font-size: 1.8rem;
+  }
+
+  .modal-box-review > p {
+    font-size: 1.4rem;
+  }
+}
+
+@media screen and (min-width: 1441px) {
+  .modal-box {
+    padding: 4rem;
+    font-size: 2.5rem;
+  }
+
+  .modal-btn {
+    width: 60px;
+    height: 60px;
+  }
+
+  .modal-box-head > h1 {
+    font-size: 4.5rem;
+  }
+
+  .modal-box-text-item > img {
+    width: 200px;
+    height: 200px;
+  }
+
+  .modal-box b,
+  .modal-box-review > h4 {
+    font-size: 3.5rem;
+  }
+
+  .modal-box-review > p {
+    font-size: 2.5rem;
+  }
 }
