--- a/src/static/css/components/sidebar.css
+++ b/src/static/css/components/sidebar.css
@@ -2,75 +2,101 @@
 
 #sbar {
   position: relative;
-  z-index: 314159;
   display: inline-block;
-  width: 40vw;
-  height: calc(100vh - 40px - 2rem);
+  flex-grow: 1;
   background-color: #767676;
 }
 
 #sbar > .sbar-ctn {
   display: flex;
   flex-direction: column;
-  height: 100%;
   color: black;
 }
 
+.sbar-listing.active {
+  display: block;
+}
 
-
-
-
-
-
-
-
-
+.sbar-listing.hidden {
+  display: none;
+}
 
 .listing-focus,
 .search-focus {
-  height: calc(100vh - 40px - 3.8rem);
-  padding: 1rem;
   display: flex;
   flex-direction: column;
   flex-grow: 1;
+
   overflow: scroll;
+  box-sizing: border-box;
+
+  height: 50vh;
+
   background-color: white;
 }
 
-.listing-hostCtn {
-  padding: 2rem 0 1.5rem;
-  margin: 1rem;
+.listing-head,
+.listing-host-ctn,
+.listing-desc-ctn,
+.listing-size,
+.listing-amenities,
+.listing-reviews {
+  box-sizing: border-box;
+  padding: 1.5rem 1rem;
+  border-bottom: 1px solid rgb(220, 220, 220);
+}
+
+.listing-head {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.listing-head > h1 {
+  margin: 0.5rem;
+  text-align: center;
+  word-break: break-all;
+  font-family: Raleway-Bold;
+  font-size: 1.5rem;
+}
+
+.listing-head > img {
+  display: block;
+  max-width: calc(100vw - 1rem);
+  width: 100%;
+  height: 40vh;
+  border-radius: 24px;
+}
+
+.listing-host-ctn {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  border-bottom: 1px solid rgb(220,220,220);
+  border-bottom: 1px solid rgb(220, 220, 220);
 }
 
-.listing-hostCtn > h3 {
+.listing-host-ctn > h3 {
   width: 60%;
   font-family: Raleway-Bold;
   font-size: 1.2rem;
 }
 
-.listing-hostCtn > img {
+.listing-host-ctn > img {
   width: 60px;
   border: 1px solid black;
-  border-radius: 192px;
+  border-radius: 100%;
 }
 
-.listing-descCtn {
-  padding-bottom: 1.5rem;
-  margin: 1.5rem 1rem;
-  border-bottom: 1px solid rgb(220,220,220);
-}
-
-.listing-descCtn > p {
-  margin-bottom: 1rem;
+.listing-desc-ctn > p {
+  margin: 1rem;
   font-family: Raleway-Regular;
   font-size: 1rem;
 }
 
-.listing-descCtn > button {
+.listing-desc-btn,
+.listing-amenities-btn,
+.listing-review-btn {
+  margin-left: 1rem;
   border: none;
   border-bottom: 3px solid black;
   font-family: Raleway-Regular;
@@ -78,118 +104,97 @@
   background-color: transparent;
 }
 
-.listing-Size {
-  margin: 1.5rem 1rem;
-  padding-bottom: 1.5rem;
-  border-bottom: 1px solid rgb(220,220,220);
-}
-
-.listing-Size > h3 {
-  width: 60%;
+.listing-size > h3 {
+  width: 70%;
   margin-bottom: 1.5rem;
   font-family: Raleway-Bold;
   font-size: 1.2rem;
 }
- 
-.listing-SizeIcon {
-  width: 50px;
-  height: 50px;
-}
 
-.listing-IconCtn {
+.listing-icon-ctn {
   display: flex;
   align-items: center;
+  margin: 0rem 1rem;
 }
 
-.listing-IconCtn span {
+.listing-size-icon,
+.listing-amenities-ctn-item > img {
+  width: 40px;
+  height: 40px;
+}
+
+.listing-icon-ctn span {
   margin-right: 1rem;
   font-family: Raleway-Bold;
   font-size: 1rem;
 }
 
-.listing-Amen {
-  margin: 1.5rem 1rem;
-  padding-bottom: 1.5rem;
-  border-bottom: 1px solid rgb(220,220,220);
-}
-
-.listing-Amen > h3 {
-  width: 60%;
+.listing-amenities > h3 {
+  width: 70%;
   margin-bottom: 1.5rem;
   font-family: Raleway-Bold;
   font-size: 1.2rem;
 }
 
-.listing-AmenCtn {
+.listing-amenities-ctn {
   display: flex;
   flex-wrap: wrap;
-  margin-bottom: 1.5rem;
+  margin: 1rem;
 }
 
-.listing-AmenCtnItem {
+.listing-amenities-ctn-item {
   display: flex;
   align-items: center;
-  margin-right: 1rem;
+  margin: 0rem 1rem 0.5rem 0rem;
   width: 40%;
 }
 
-.listing-AmenCtnItem > img {
-  width: 40px;
-  height: 40px;
-}
-
-.listing-AmenCtnItem > span {
+.listing-amenities-ctn-item > span {
   font-family: Raleway-Regular;
   font-size: 1rem;
 }
 
-.listing-AmenBtn {
-  border: none;
-  border-bottom: 3px solid black;
-  font-family: Raleway-Regular;
-  font-size: 1rem;
-  background-color: transparent;
-}
-
-.listing-Reviews {
+.listing-reviews {
   padding-bottom: 2.5rem;
 }
 
-.listing-ReviewsHead {
+.listing-reviews-head {
   display: flex;
   align-items: center;
 }
 
-.listing-ReviewsHead > img {
+.listing-reviews-head > img {
   width: 40px;
   height: 40px;
 }
 
-.listing-ReviewsHead > h3 {
+.listing-reviews-head > h3 {
   font-family: Raleway-Bold;
   font-size: 1.2rem;
 }
 
-
-.listing-ReviewsCtn {
+.listing-reviews-ctn {
   margin: 1rem;
   font-family: Raleway-Regular;
   font-size: 1rem;
 }
 
-.listing-ReviewItem {
+.listing-reviews-item {
   position: relative;
   display: flex;
-  justify-content: space-between;
-  align-items: center;
+  flex-direction: column;
   margin-bottom: 2rem;
 }
 
 .listing-ScoreCtn {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-between;
   align-items: center;
-  width: 70%;
+  width: 100%;
+}
+
+.listing-ScoreCtn > span {
+  margin-right: 1rem;
 }
 
 .listing-BarCtn {
@@ -201,7 +206,7 @@
 
   width: 50%;
   height: 8px;
-  background-color: #CECFCD;
+  background-color: #cecfcd;
 }
 
 .listing-BarVal {
@@ -216,4 +221,179 @@
   background-color: #484848;
 }
 
-.
+@media screen and (min-width: 426px) {
+  .listing-head,
+  .listing-host-ctn,
+  .listing-desc-ctn,
+  .listing-size,
+  .listing-amenities,
+  .listing-reviews {
+    padding: 1.5rem 4rem;
+  }
+
+  .listing-head {
+    align-items: center;
+  }
+
+  .listing-head > h1 {
+    width: 50%;
+  }
+
+  .listing-head > img {
+    display: block;
+    width: 60%;
+    height: 40vh;
+    border-radius: 24px;
+  }
+}
+
+@media screen and (min-width: 769px) {
+  .listing-head,
+  .listing-host-ctn,
+  .listing-desc-ctn,
+  .listing-size,
+  .listing-amenities,
+  .listing-reviews {
+    padding: 1.5rem 2rem;
+  }
+
+  .listing-head > img {
+    display: block;
+    width: 100%;
+    height: 30vh;
+    border-radius: 24px;
+  }
+
+  .listing-focus,
+  .search-focus {
+    display: flex;
+    flex-direction: column;
+    /* flex-grow: 1; */
+
+    overflow: scroll;
+    box-sizing: border-box;
+
+    height: calc(100vh - 2rem - 40px);
+    width: 40vw;
+
+    background-color: white;
+  }
+
+  .listing-reviews-item {
+    justify-content: space-between;
+    flex-direction: row;
+    margin-bottom: 2rem;
+  }
+
+  .listing-ScoreCtn {
+    justify-content: space-evenly;
+    width: 60%;
+  }
+}
+
+@media screen and (min-width: 1025px) {
+  .listing-head > h1 {
+    margin: 1rem;
+    font-size: 2.5rem;
+  }
+
+  .listing-head > img {
+    display: block;
+    width: 70%;
+    height: 40vh;
+    border-radius: 24px;
+  }
+
+  .listing-focus,
+  .search-focus {
+    height: calc(100vh - 124px);
+  }
+
+  .listing-host-ctn > h3,
+  .listing-size > h3,
+  .listing-amenities > h3,
+  .listing-reviews-head > h3 {
+    font-size: 1.8rem;
+  }
+
+  .listing-host-ctn > img {
+    width: 70px;
+  }
+
+  .listing-desc-ctn > p,
+  .listing-desc-btn,
+  .listing-amenities-btn,
+  .listing-review-btn,
+  .listing-icon-ctn span,
+  .listing-amenities-ctn-item > span,
+  .listing-reviews-ctn {
+    font-size: 1.4rem;
+  }
+
+  .listing-size-icon,
+  .listing-amenities-ctn-item > img,
+  .listing-reviews-head > img {
+    width: 80px;
+    height: 80px;
+  }
+
+  .listing-BarCtn,
+  .listing-BarVal {
+    height: 12px;
+  }
+}
+
+/* @media screen and (min-width: 1441px) {
+  .listing-head > h1 {
+    font-size: 4.5rem;
+  }
+
+  .listing-focus,
+  .search-focus {
+    
+    height: calc(100vh - 72px);
+  }
+
+  .listing-head,
+  .listing-host-ctn,
+  .listing-desc-ctn,
+  .listing-size,
+  .listing-amenities,
+  .listing-reviews {
+    padding: 6rem 4rem;
+    border-bottom: 4px solid rgb(220, 220, 220);
+  }
+
+  .listing-host-ctn > h3,
+  .listing-size > h3,
+  .listing-amenities > h3,
+  .listing-reviews-head > h3 {
+    font-size: 3.5rem;
+  }
+
+  .listing-host-ctn > img {
+    width: 120px;
+  }
+
+  .listing-desc-ctn > p,
+  .listing-desc-btn,
+  .listing-amenities-btn,
+  .listing-review-btn,
+  .listing-icon-ctn span,
+  .listing-amenities-ctn-item > span,
+  .listing-reviews-ctn {
+    font-size: 2.5rem;
+  }
+
+  .listing-size-icon,
+  .listing-amenities-ctn-item > img,
+  .listing-reviews-head > img {
+    width: 120px;
+    height: 120px;
+  }
+
+  .listing-BarCtn,
+  .listing-BarVal {
+    height: 16px;
+  }
+} */
