--- a/src/static/css/main.css
+++ b/src/static/css/main.css
@@ -1,25 +1,4 @@
 @import url("base/index.css");
 @import url("components/index.css");
 @import url("layout/index.css");
-
-body#airbnb {
-  position: relative;
-  z-index: 1;
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
-  background: white;
-}
-
-#airbnb {
-  position: relative;
-}
-
-#airbnb .hidden {
-  display: none;
-}
-
-#airbnb .active {
-  display: block;
-}
-
+@import url("pages/index.css");
