--- a/src/static/css/components/sidebar.css
+++ b/src/static/css/components/sidebar.css
@@ -268,7 +268,6 @@
   .search-focus {
     display: flex;
     flex-direction: column;
-    /* flex-grow: 1; */
 
     overflow: scroll;
     box-sizing: border-box;
@@ -292,6 +291,11 @@
 }
 
 @media screen and (min-width: 1025px) {
+  #checking {
+    position: relative;
+    z-index: 314301;
+    background-color: orangered;
+  }
   .listing-head > h1 {
     margin: 1rem;
     font-size: 2.5rem;
