--- a/src/static/css/layout/modal.css
+++ b/src/static/css/layout/modal.css
@@ -156,6 +156,36 @@
 @media screen and (min-width: 1441px) {
   .modal-box {
     padding: 4rem;
+    font-size: 1.4rem;
+  }
+
+  .modal-btn {
+    width: 60px;
+    height: 60px;
+  }
+
+  .modal-box-head > h1 {
+    font-size: 3rem;
+  }
+
+  .modal-box-text-item > img {
+    width: 140px;
+    height: 140px;
+  }
+
+  .modal-box b,
+  .modal-box-review > h4 {
+    font-size: 2rem;
+  }
+
+  .modal-box-review > p {
+    font-size: 1.4rem;
+  }
+}
+
+@media screen and (min-width: 2559px) {
+  .modal-box {
+    padding: 4rem;
     font-size: 2.5rem;
   }
 
