--- a/src/static/css/components/sidebar.css
+++ b/src/static/css/components/sidebar.css
@@ -35,6 +35,13 @@
   background-color: white;
 }
 
+.listing-temp {
+  flex-grow: 1;
+  align-self: center;
+  width: 120px;
+  height: auto;
+}
+
 .listing-head,
 .listing-host-ctn,
 .listing-desc-ctn,
@@ -222,6 +229,10 @@
 }
 
 @media screen and (min-width: 426px) {
+  .listing-temp {
+    width: 140px;
+  }
+
   .listing-head,
   .listing-host-ctn,
   .listing-desc-ctn,
@@ -248,6 +259,10 @@
 }
 
 @media screen and (min-width: 769px) {
+  .listing-temp {
+    width: 160px;
+  }
+
   .listing-head,
   .listing-host-ctn,
   .listing-desc-ctn,
@@ -291,22 +306,19 @@
 }
 
 @media screen and (min-width: 1025px) {
-  #checking {
-    position: relative;
-    z-index: 314301;
-    background-color: orangered;
+  .listing-temp {
+    width: 200px;
   }
 
   .listing-head > h1 {
     margin: 1rem;
-    width: 70%;
     font-size: 2.5rem;
   }
 
   .listing-head > img {
     display: block;
     width: 70%;
-    height: 40vh;
+    height: 30vh;
     border-radius: 24px;
   }
 
@@ -351,7 +363,15 @@
 
 @media screen and (min-width: 1441px) {
   .listing-head > h1 {
+    width: 90%;
     font-size: 2.5rem;
+  }
+
+  .listing-head > img {
+    display: block;
+    width: 90%;
+    height: 40vh;
+    border-radius: 24px;
   }
 
   .listing-focus,
@@ -405,6 +425,10 @@
 
 
 @media screen and (min-width: 2559px) {
+  .listing-temp {
+    width: 300px;
+  }
+
   .listing-head > h1 {
     font-size: 3rem;
   }
