--- a/src/static/css/components/search.css
+++ b/src/static/css/components/search.css
@@ -4,7 +4,7 @@
 }
 
 #search > h1 {
-  padding: 1.5rem 1rem;
+  padding: 3rem 2rem 1.5rem;
   font-family: Raleway-Bold;
   font-size: 1.5rem;
 }
@@ -69,6 +69,15 @@
 #search-end {
   border-bottom: 2px solid #00a699;
   outline: none;
+}
+
+#search-transport-ctn {
+  padding: 1rem;
+}
+
+#search-transport-ctn label {
+  font-family: Raleway-Bold;
+  font-size: 1.2rem;
 }
 
 #search-results {
